# sp500-selector

./: .gitignore  pyproject.toml
notebooks/: Modelling.ipynb
src/app/: config.py
