[project]
name = "sp500-selector"
version = "0.1.0"
description = "ML based stocks selection app."
authors = [
    {name = "Mateusz Grzyb",email = "mwgrzyb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
